--- a/BokInterface/Properties/ShinbokResources.resx
+++ b/BokInterface/Properties/ShinbokResources.resx
@@ -547,4 +547,67 @@
   <data name="rockbuster" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\bok3\weapons\rockbuster.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="fighter" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok3\gun\fighter.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="calamity" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok3\gun\calamity.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="wizard" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok3\gun\wizard.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bubbles" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok3\gun\bubbles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="hoop" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok3\gun\hoop.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="juggler" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok3\gun\juggler.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="stalker" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok3\gun\stalker.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dragoon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok3\gun\dragoon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="samurai" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok3\gun\samurai.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bomber" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok3\gun\bomber.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tempest" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok3\gun\tempest.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="beatmania" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok3\gun\beatmania.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sol_lens" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok3\gun\sol_lens.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="luna_lens" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok3\gun\luna_lens.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="flame_lens" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok3\gun\flame_lens.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="frost_lens" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok3\gun\frost_lens.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cloud_lens" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok3\gun\cloud_lens.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="earth_lens" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok3\gun\earth_lens.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="star_lens" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok3\gun\star_lens.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="astro_lens" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok3\gun\astro_lens.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dark_lens" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok3\gun\dark_lens.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
