--- a/BokInterface/Properties/BoktaiResources.resx
+++ b/BokInterface/Properties/BoktaiResources.resx
@@ -193,7 +193,31 @@
   <data name="guardian" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\bok\frames\guardian.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="phantom" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="phantom_battery" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\bok\frames\phantom.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="single_battery" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\batteries\single.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="double_battery" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\batteries\double.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="triple_battery" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\batteries\triple.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="quad_battery" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\batteries\quad.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="quint_battery" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\batteries\quint.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="infinite_battery" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\batteries\infinite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="chaos_battery" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\batteries\chaos.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="astro_battery" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\batteries\astro.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
