--- a/BokInterface/Properties/BoktaiResources.resx
+++ b/BokInterface/Properties/BoktaiResources.resx
@@ -217,6 +217,9 @@
   <data name="guardian" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\bok\frames\guardian.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="phantom" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\frames\phantom.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="phantom_battery" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\bok\frames\phantom.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
