--- a/BokInterface/Properties/BoktaiResources.resx
+++ b/BokInterface/Properties/BoktaiResources.resx
@@ -268,4 +268,130 @@
   <data name="nightmare" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\bok\grenades\nightmare.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="green_apple" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\green_apple.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="red_apple" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\red_apple.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="golden_apple" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\golden_apple.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="heal_fruit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\heal_fruit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="solar_nut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\solar_nut.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="see_all_nut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\see_all_nut.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tiptoe_nut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\tiptoe_nut.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="speed_nut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\speed_nut.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="banana" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\banana.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="evil_banana" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\evil_banana.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="redshroom" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\redshroom.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="blueshroom" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\blueshroom.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="flame_nut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\flame_nut.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ice_nut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\ice_nut.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bearnut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\bearnut.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="enduranut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\enduranut.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="empty_gourd" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\empty_gourd.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="solar_leaf" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\solar_leaf.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bad_pumpkin" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\bad_pumpkin.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="revivafruit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\revivafruit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="x2_carrot" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\x2_carrot.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="fast_carrot" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\fast_carrot.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="life_fruit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\life_fruit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="rotten_nut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\rotten_nut.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="mr_rainnot" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\mr_rainnot.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tonniar_rm" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\tonniar_rm.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sunny_clog" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\sunny_clog.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="star_card" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\star_card.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="fool_card" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\fool_card.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dark_card" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\dark_card.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="silver_coin" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\silver_coin.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="circle_key" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\circle_key.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="triangle_key" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\triangle_key.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="square_key" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\square_key.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cross_key" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\cross_key.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sol_emblem" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\sol_emblem.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="luna_emblem" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\luna_emblem.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="flame_emblem" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\flame_emblem.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="frost_emblem" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\frost_emblem.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cloud_emblem" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\cloud_emblem.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="earth_emblem" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\earth_emblem.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dark_emblem" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok\items\dark_emblem.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
