--- a/BokInterface/Properties/DsResources.resx
+++ b/BokInterface/Properties/DsResources.resx
@@ -364,8 +364,8 @@
   <data name="bouquet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\ds\items\bouquet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="frech_picked_herbs" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\ds\items\frech_picked_herbs.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="fresh_picked_herbs" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\ds\items\fresh_picked_herbs.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="caravan_package_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\ds\items\caravan_package_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -376,8 +376,8 @@
   <data name="caravan_package_yellow" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\ds\items\caravan_package_yellow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="frech_picked_mushrooms" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\ds\items\frech_picked_mushrooms.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="fresh_picked_mushrooms" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\ds\items\fresh_picked_mushrooms.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="spare_bottlecap" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\ds\items\spare_bottlecap.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
